--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">
   </head>
   <body>
     <div class="questionWrapper">
