--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="/javascripts/jquery-3.1.1.min.js"></script>
+    <script src="/javascripts/main.js"></script>
     <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">
   </head>
   <body>
