Add Material design style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,14 +27,14 @@ body {
 
 .pokeType {
   min-width: 96px;
-  min-height: 40px;
   border: 2px solid #dfdfdf;
   border-radius: 16px;
   text-align: center;
 }
 
 .typeName {
-  line-height: 40px;
+  line-height: 32px;
+  color: #ffffff;
 }
 
 .typeFire {
@@ -48,11 +48,12 @@ body {
 .answerWrapper {
 }
 
+.answerButtonWrapper {
+  margin: 18px auto;
+  width: 40%;
+  min-width: 216px;
+}
+
 .answerButton {
-  display: block;
-  height: 44px;
-  width: 50%;
-  max-width: 200px;
-  margin: 24px auto;
-  border-radius: 8px;
+  width: 100%;
 }
