--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/mui.min.css">
+    <script src="/javascripts/mui.min.js"></script>
     <script src="/javascripts/jquery-3.1.1.min.js"></script>
-    <script src="/javascripts/main.js"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="/javascripts/script.js"></script>
     <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">
   </head>
   <body>
@@ -35,10 +37,18 @@
       <span>効果は?</span>
     </div>
     <div class="answerWrapper">
-      <button class="answerButton">ばつぐんだ！</button>
-      <button class="answerButton">ふつう</button>
-      <button class="answerButton">いまひとつ...</button>
-      <button class="answerButton">ない...</button>
+      <div class="answerButtonWrapper">
+        <button class="mui-btn mui-btn--raised answerButton">ばつぐんだ！</button>
+      </div>
+      <div class="answerButtonWrapper">
+        <button class="mui-btn mui-btn--raised answerButton">ふつう</button>
+      </div>
+      <div class="answerButtonWrapper">
+        <button class="mui-btn mui-btn--raised answerButton">いまひとつ...</button>
+      </div>
+      <div class="answerButtonWrapper">
+        <button class="mui-btn mui-btn--raised answerButton">ない...</button>
+      </div>
     </div>
   </body>
 </html>
