--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,3 +122,41 @@ body {
   width: 100%;
   min-width: 96px;
 }
+
+.choosed {
+  text-align: center;
+}
+
+.correct {
+  text-align: center;
+}
+
+.next {
+  display: block;
+  width: 30%;
+  max-width: 200px;
+  margin: 0 auto;
+}
+
+.verifyAnswer.mdl-card {
+  width: 95%;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.verifyAnswer > .mdl-card__title {
+  display: initial;
+  text-align: center;
+  padding-bottom: 0;
+}
+
+.verifyAnswer > .mdl-card__title > .mdl-card__title-text {
+  display: inline;
+  font-size: 16px;
+}
+
+.verifyAnswer > .mdl-card__supporting-text {
+  padding-top: 0;
+  text-align: center;
+  color: initial;
+}
