Modify background color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Hiragino Sans', '游ゴシック', meiryo, sans-serif;
-  background-color: #ffffff;
+  background-color: #fafafa;
 }
 
 .questionWrapper {
