--- a/views/onetoone.ejs
+++ b/views/onetoone.ejs
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
     <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/material.min.css">
-    <script src="/javascripts/material.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
+
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Pokedy</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="questionWrapper">
       <div class="questionItem">
         <div class="questionHeader">
@@ -55,7 +64,15 @@
       </form>
     </div>
 
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Copyright &copy; 2017 Morico All Rights Reserved.</p>
+      </div>
+    </footer>
+
     <script src="/javascripts/jquery-3.1.1.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/material.min.js"></script>
     <script src="/javascripts/script.js"></script>
   </body>
 </html>
