--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Hiragino Sans', '游ゴシック', meiryo, sans-serif;
-  background-color: #fafafa;
+  /*background-color: #fafafa;*/
 }
 
 .questionWrapper {
@@ -159,4 +159,31 @@ body {
   padding-top: 0;
   text-align: center;
   color: initial;
+}
+
+main .container {
+  padding-bottom: 60px;
+}
+
+/*
+ * footer
+ */
+.footer {
+  width: 100%;
+  background-color: #f5f5f5;
+  position: fixed;
+  bottom: 0;
+}
+
+.container .text-muted {
+  margin: 20px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.center {
+  text-align: center;
 }
