--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,51 +4,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
-    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
-    <div class="questionWrapper">
-      <div class="questionItem">
-        <div class="questionHeader">
-          <span>こうげき</span>
-        </div>
-        <div class="questionContent pokeType typeFire">
-          <span class="typeName">ほのお</span>
-        </div>
-      </div>
-      <div class="questionContent">
-        <span>vs</span>
-      </div>
-      <div class="questionItem">
-        <div class="questionHeader">
-          <span>ぼうぎょ</span>
-        </div>
-        <div class="questionContent pokeType typeWater">
-          <span class="typeName">みず</span>
-        </div>
-      </div>
-    </div>
 
-    <div class="questionText">
-      <span>効果は?</span>
-    </div>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Pokedy</a>
+        </div>
+      </div>
+    </nav>
 
-    <div class="answerWrapper">
-      <div class="answerButtonWrapper">
-        <button class="answerButton">ばつぐんだ！</button>
+    <main>
+      <div class="container">
+        <h1>ポケモンのタイプ相性言えるかな？</h1>
+        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプがどれか答えよう！</p>
+        <p>全部のタイプ相性を覚えよう！</p>
+        <div class="center">
+          <a href="/onetoone" class="btn btn-default btn-lg center" role="button">はじめる</a>
+        </div>
       </div>
-      <div class="answerButtonWrapper">
-        <button class="answerButton">ふつう</button>
-      </div>
-      <div class="answerButtonWrapper">
-        <button class="answerButton">いまひとつ...</button>
-      </div>
-      <div class="answerButtonWrapper">
-        <button class="answerButton">ない...</button>
-      </div>
-    </div>
+    </main>
 
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Copyright &copy; 2017 Morico All Rights Reserved.</p>
+      </div>
+    </footer>
+
+    <script src="/javascripts/jquery-3.1.1.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/script.js"></script>
   </body>
 </html>
