--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <main>
       <div class="container">
         <h1>ポケモンのタイプ相性言えるかな？</h1>
-        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプがどれか答えよう！</p>
+        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう！</p>
         <p>全部のタイプ相性を覚えよう！</p>
         <div class="center">
           <a href="/onetoone" class="btn btn-default btn-lg center" role="button">はじめる</a>
