--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,44 @@
 <!doctype html>
 <html lang="ja">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedy</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body>
+</head>
 
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">Pokedy</a>
+<body>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">Pokedy</a>
+            </div>
         </div>
-      </div>
     </nav>
 
-    <main>
-      <div class="container">
-        <h1>ポケモンのタイプ相性言えるかな？</h1>
-        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう！</p>
-        <p>全部のタイプ相性を覚えよう！</p>
-        <div class="center">
-          <a href="/onetoone" class="btn btn-default btn-lg center" role="button">はじめる</a>
+    <div class="container">
+        <div class="page-header">
+            <h1>ポケモンのタイプ相性言えるかな?</h1>
         </div>
-      </div>
-    </main>
+        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう!</p>
+        <p>全部のタイプ相性を覚えよう!</p>
+        <div class="container text-center getready">
+            <a href="/onetoone" class="btn btn-default btn-lg">はじめる</a>
+        </div>
+    </div>
 
     <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Copyright &copy; 2017 Morico All Rights Reserved.</p>
-      </div>
+        <div class="container">
+            <p class="text-muted">&copy; 2017 Morico All Rights Reserved.</p>
+        </div>
     </footer>
 
     <script src="/javascripts/jquery-3.1.1.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/script.js"></script>
-  </body>
+</body>
+
 </html>
