--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,10 +131,7 @@ body {
 }
 
 .next {
-  display: block;
-  width: 30%;
-  max-width: 200px;
-  margin: 0 auto;
+  margin: 3rem auto;
 }
 
 .verifyAnswer.mdl-card {
@@ -164,6 +161,9 @@ body {
   margin: 4rem auto;
 }
 
+.answerButtonWrapper > .answerButton {
+
+}
 
 
 
