Add correct answer feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,43 +2,43 @@
 <html lang="ja">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokedy</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pokedy</title>
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Pokedy</a>
-            </div>
-        </div>
-    </nav>
-
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <div class="page-header">
-            <h1>ポケモンのタイプ相性言えるかな?</h1>
-        </div>
-        <p class="lead">こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう!</p>
-        <p>全部のタイプ相性を覚えよう!</p>
-        <div class="container text-center getready">
-            <a href="/onetoone" class="btn btn-default btn-lg">はじめる</a>
-        </div>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Pokedy</a>
+      </div>
     </div>
+  </nav>
 
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted">&copy; 2017 Morico All Rights Reserved.</p>
-        </div>
-    </footer>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>ポケモンのタイプ相性言えるかな?</h1>
+      <p>こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう!</p>
+      <p>全部のタイプ相性を覚えよう!</p>
+      <div class="container text-center getready">
+        <a href="/onetoone" class="btn btn-default btn-lg">はじめる</a>
+      </div>
+    </div>
+  </div>
 
-    <script src="/javascripts/jquery-3.1.1.min.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
-    <script src="/javascripts/script.js"></script>
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">&copy; 2017 Morico All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <script src="/javascripts/jquery-3.1.1.min.js"></script>
+  <script src="/javascripts/bootstrap.min.js"></script>
+  <script src="/javascripts/script.js"></script>
 </body>
 
 </html>
