--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,6 +165,13 @@ body {
 
 }
 
+.verifyAnswerContainer {
+  margin: 2rem auto;
+}
+
+.showAnswerContainer {
+  margin: 1rem auto;
+}
 
 
 /* Sticky footer styles
