--- a/views/correct.ejs
+++ b/views/correct.ejs
@@ -42,23 +42,40 @@
             </div>
         </div>
 
-        <div class="verifyAnswer">
-            <div class="text-center">
-                <h2 class="">あなたの解答</h2>
-            </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">あなたの解答</h3>
+          </div>
+          <div class="panel-body">
             <div class="text-center">
                 <div class="answerButtonWrapper">
-                  <% if (correct === '正解！') { %>
+                  <% if (isCorrect) { %>
                   <% var state = 'success'; %>
                   <% } else { %>
                   <% var state = 'danger'; %>
                   <% } %>
                   <button class="btn btn-<%= state %> answerButton"><%= choosed %></button>
                 </div>
-                <%= correct %>
+                <% if (isCorrect) { %>
+                <div>正解!</div>
+                <% } else { %>
+                <div>不正解...</div>
+                <div class="verifyAnswerContainer">
+                  <a class="btn btn-default" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">正解を確認する</a>
+                  <div class="collapse" id="collapseExample">
+                    <div class="showAnswerContainer">
+                      <p class><%= compat %></p>
+                    </div>
+                  </div>
+                </div>
+                <% } %>
             </div>
+          </div>
+        </div>
+
+        <div class="verifyAnswer">
             <div class="text-center">
-                <a href="/onetoone" class="btn btn-default next">次の問題へ</a>
+                <a href="/onetoone" class="btn btn-default next">> 次の問題へ</a>
             </div>
         </div>
 
