--- a/views/correct.ejs
+++ b/views/correct.ejs
@@ -46,29 +46,31 @@
           <div class="panel-heading">
             <h3 class="panel-title text-center">あなたの解答</h3>
           </div>
-          <div class="panel-body">
+          <% if (isCorrect) { %>
+          <% var state = 'success'; %>
+          <% var correctMsg = '正解!'; %>
+          <% var answerStyle = 'correct'; %>
+          <% } else { %>
+          <% var state = 'danger'; %>
+          <% var correctMsg = '不正解...'; %>
+          <% var answerStyle = 'incorrect'; %>
+          <% } %>
+          <div class="panel-body answer__<%= answerStyle %>">
             <div class="text-center">
-                <div class="answerButtonWrapper">
-                  <% if (isCorrect) { %>
-                  <% var state = 'success'; %>
-                  <% } else { %>
-                  <% var state = 'danger'; %>
-                  <% } %>
-                  <button class="btn btn-<%= state %> answerButton"><%= choosed %></button>
-                </div>
-                <% if (isCorrect) { %>
-                <div>正解!</div>
-                <% } else { %>
-                <div>不正解...</div>
-                <div class="verifyAnswerContainer">
-                  <a class="btn btn-default" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">正解を確認する</a>
-                  <div class="collapse" id="collapseExample">
-                    <div class="showAnswerContainer">
-                      <p class><%= compat %></p>
-                    </div>
+              <div class="answerButtonWrapper">
+                <button class="btn btn-default answerButton"><%= choosed %></button>
+              </div>
+              <div><%= correctMsg %></div>
+              <% if (!isCorrect) { %>
+              <div class="verifyAnswerContainer">
+                <a class="btn btn-default" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">正解を確認する</a>
+                <div class="collapse" id="collapseExample">
+                  <div class="showAnswerContainer">
+                    <p class><%= compat %></p>
                   </div>
                 </div>
-                <% } %>
+              </div>
+              <% } %>
             </div>
           </div>
         </div>
