--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
       <h1>ポケモンのタイプ相性言えるかな?</h1>
       <p>こうげきのタイプとぼうぎょのタイプが表示されるので正解のタイプ相性がどれか答えよう!</p>
       <p>全部のタイプ相性を覚えよう!</p>
-      <div class="container text-center getready">
+      <div class="text-center getreadyContainer">
         <a href="/onetoone" class="btn btn-default btn-lg">はじめる</a>
       </div>
     </div>
