Change header not fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,11 +166,11 @@ body {
 }
 
 .verifyAnswerContainer {
-  margin-top: 2rem;
+  margin-top: 15px;
 }
 
 .showAnswerContainer {
-  margin: 1rem auto;
+
 }
 
 .answer__correct {
@@ -193,6 +193,10 @@ body {
 
 .answer-text {
   font-size: 2.0rem;
+}
+
+.answer-correct-text {
+  margin: 15px 0 0;
 }
 
 /* Sticky footer styles
@@ -218,9 +222,6 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-body > .container {
-  padding: 60px 15px 0;
-}
 .container .text-muted {
   margin: 20px 0;
 }
