--- a/views/correct.ejs
+++ b/views/correct.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">Pokedy</a>
@@ -70,7 +70,7 @@
             <a class="btn btn-default" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">正解を確認する</a>
             <div class="collapse" id="collapseExample">
               <div class="showAnswerContainer">
-                <p class><%= compat %></p>
+                <p class="answer-correct-text"><%= compat %></p>
               </div>
             </div>
           </div>
