--- a/views/onetoone.ejs
+++ b/views/onetoone.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">Pokedy</a>
